# Dungeon-Crawler

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DungeonCrawl  README.md  __init__.py  ai.py  balance_thresholds.yml  bosses.json  combat.py  config.example.json  config.json  dungeon_crawler.py  entities.py  installation.rst  items.py  legacy_dungeon_crawler.py  map.py  messages.pot  modding.md  mypy.ini  plugins.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  riddles.json  shop.py  test_build_character.py  test_combat.py  test_dungeon_generation.py  test_floor_events.py  test_leaderboard.py  test_save_load.py  test_shop.py  tutorial.py
.github/ISSUE_TEMPLATE/: bug_report.md  suggestion.md
.github/workflows/: ci.yml  format-pr.yml  lint.yml  pages.yml  tests.yml
DungeonCrawlerCarl/: project.godot
DungeonCrawlerCarl/data/: core_items.json  enemies.json  events.json  events_extended.json  floors.json
data/: __init__.py  bosses.json  companions.json  core_enemies.json  core_events.json  enemies.json  events_extended.json  floors.json  items.json  skills.json
data/floors/: 01_intro.json  02_floor.json  03_floor.json  04_floor.json  05_floor.json  06_floor.json  07_floor.json  08_floor.json  (+10 more)
docs/: README.md  api_reference.rst  conf.py  contributing.rst  gameplay_guide.rst  index.rst  installation.rst  modding.md  performance.md  releasing.md
dungeoncrawler/: __init__.py  __main__.py  ai.py  bestiary.py  combat.py  combat_log.py  config.py  constants.py  data.py  dungeon.py  entities.py  events.py  flavor.py  i18n.py  items.py  main.py  map.py  map_text.py  paths.py  plugins.py  quests.py  rendering.py  scoring.py  shop.py  sim.py  stats_logger.py  status_effects.py  tutorial.py
locale/: messages.pot
schemas/: floor.json  items.json
scripts/: analyze_balance.py  simulate_battles.py
tests/: conftest.py  test_augments.py  test_balance_matrix.py  test_boss_loot.py  test_build_character.py  test_character_selection.py  test_codex.py  test_combat.py  test_combat_log_buffer.py  test_combat_logging.py  test_combat_math.py  test_combat_resolver_determinism.py  test_companions.py  test_config.py  test_config_load_error.py  test_core_combat.py  test_core_events.py  test_core_intents.py  test_core_state_save.py  test_data_loading.py  test_defense_stats.py  test_dungeon_generation.py  test_dungeon_helpers.py  test_early_exit_save.py  test_elite_resistance.py  test_event_config_missing.py  test_events.py  test_floor12.py  test_floor13.py  test_floor14.py  test_floor15.py  test_floor16.py  test_floor17.py  test_floor18.py  test_floor_events.py  test_floor_scaling.py  test_floor_schema.py  test_floor_swapping.py  test_gas_vent_hook.py  test_generation_properties.py  (+45 more)
(+44 files in other folders)
