[project]
name = "dungeoncrawler"
version = "0.9.0b1"
description = "Dungeon Crawler game"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Dungeon Crawler Team" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "black==25.1.0",
  "flake8==7.3.0",
  "isort==6.0.1",
  "pytest==8.4.1",
  "jsonschema==4.23.0",
  "hypothesis==6.112.0",
]

[project.scripts]
dungeon-crawler = "dungeoncrawler.main:main"
dungeoncrawler = "dungeoncrawler.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dungeoncrawler"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["data/*.json"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["dungeoncrawler", "tests"]
skip_gitignore = true

[tool.flake8]
# Let flake8 match Black style and avoid false positives
max-line-length = 120
extend-ignore = ["E203", "W503"]

# If those imports in dungeon.py are intentionally unused (e.g. for TYPE_CHECKING),
# keep this line; otherwise delete it and fix the code.
per-file-ignores = ["dungeoncrawler/dungeon.py:F401"]
